# myToDo

./: .gitignore  README.md  opencode.json  opencode11
todo-app/: .gitignore  README.md  index.html  package-lock.json  package.json  spec.md
todo-app/scripts/: generate-icons.cjs
todo-app/src/: App.tsx  main.tsx
todo-app/src-tauri/: Cargo.toml  tauri.conf.json
todo-app/src-tauri/capabilities/: default.json
todo-app/src-tauri/icons/: icon.icns
todo-app/src-tauri/src/: lib.rs  main.rs  tray.rs
todo-app/src-tauri/src/commands/: backup.rs  mod.rs  settings.rs  stats.rs  tasks.rs  window.rs
todo-app/src-tauri/src/db/: migrations.rs  repository.rs
todo-app/src-tauri/src/window/: effects.rs
todo-app/src/assets/styles/: animations.css  fluent-tokens.css  global.css
todo-app/src/components/common/: Confetti.tsx  ErrorBoundary.tsx  GlassPanel.tsx  Toast.tsx
todo-app/src/components/dashboard/: StatsDashboard.tsx
todo-app/src/components/filters/: FilterBar.tsx
todo-app/src/components/kanban/: KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
todo-app/src/components/layout/: AppShell.tsx  TitleBar.tsx
todo-app/src/context/: ThemeContext.tsx
todo-app/src/hooks/: useDragAndDrop.ts  useKeyboardShortcuts.ts  useNotifications.ts  usePomodoro.ts  useStats.ts  useTheme.ts
todo-app/src/services/: exportService.ts  notificationService.ts  taskService.ts
todo-app/src/store/: settingsStore.ts  taskStore.ts  uiStore.ts
todo-app/src/types/: common.ts  settings.ts  task.ts
todo-app/src/utils/: constants.ts  date.ts  formatters.ts  logger.ts  validators.ts
(+9 files in other folders)
